fixed the issue: hide overflow contents(inputs)

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Author: Chaeah Park
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 16px;
-  color: #F6F8FF;
+  color: #f6f8ff;
   box-sizing: border-box;
 }
 
@@ -28,8 +28,8 @@ body {
   min-height: 630px;
   /*height: 100%;*/
   border-radius: 20px;
-  background-color: #2E3530;
-  box-shadow: 0.5rem 0.5rem 3rem 0.8rem #AAAAAA;
+  background-color: #2e3530;
+  box-shadow: 0.5rem 0.5rem 3rem 0.8rem #aaaaaa;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,29 +59,27 @@ body {
   align-items: center;
 }
 
-.text {
-  text-align: center;
-}
-
 .display--small {
   min-height: 25px;
-  background-color: ;
   /*----guideline ----*/
   /*border: 2px solid yellow;*/
-
 }
 
 .display--big {
   min-height: 85px;
-  background-color: ;
 
   /*----guideline ----*/
   /*border: 2px solid yellow;*/
 }
 
+.text {
+  max-width: 307px;
+  overflow: hidden;
+}
+
 #text--big {
-  font-size: 2.5rem;
-  margin: 1rem 0;
+  font-size: 2.3rem;
+  margin: 0.5rem 0;
 }
 
 #text--small {
@@ -100,7 +98,6 @@ body {
   flex-direction: column;
   justify-content: center;
 }
-
 
 form {
   height: 100%;
@@ -130,41 +127,48 @@ form {
 
 .number,
 #point {
-  color: #F6F8FF;
-  background-color: #2E3530;
+  color: #f6f8ff;
+  background-color: #2e3530;
   /*----guideline ----*/
   /*border: 1px solid green;*/
 }
 
 .operator,
 #solve {
-  color: #2ABFAD;
-  background-color: #F6F8FF;
+  color: #2abfad;
+  background-color: #f6f8ff;
 }
 
 #arrow {
-  background-color: #AAAAAA;
+  background-color: #aaaaaa;
 }
 
 #allClear {
-  background-color: #AAAAAA;
+  background-color: #aaaaaa;
 }
 
 #point {
   background-color: ;
 }
 
-
-
 @media screen and (max-width: 765px) {
   .container {
     min-width: 300px;
     min-height: initial;
-    box-shadow: 0.2rem 0.2rem 1.5rem 0.8rem #AAAAAA;
+    box-shadow: 0.2rem 0.2rem 1.5rem 0.8rem #aaaaaa;
   }
 
   .calculator__key {
     width: 55px;
     height: 55px;
+  }
+
+  .text {
+    max-width: 231.5px;
+    overflow: hidden;
+  }
+
+  #text--big {
+    font-size: 2rem;
   }
 }
